<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">3D CloudPoints</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_file">New File</string>

    <!-- Itens do app bar da Viewer Screen -->
    <string name="title_app_bar_home">Home</string>

    <!-- Itens do app bar da Main Screen -->
    <string name="title_app_bar_configuration">Configurações</string>

    <!-- Chaves utilizadas para salvar os estados dos modos de cameras para um correto ciclo
     de vida do aplicativo -->
    <string name="key_save_virtual_trackball">key_save_virtual_trackball</string>
    <string name="key_save_camera">key_save_camera</string>

    <!-- String utilizada como chave para saber se o file chooser irá retornar o arquivo escolhido
    pelo método onActivityResult -->
    <string name="isActivityForResult">isActivityForResult</string>

    <!-- TAG usada para definir o navigationDrawer com o fragment do PreferenceFragment
    responsavel pelas configurações -->
    <string name="tag_nav_drawer_fragment">nav_drawer_TAG</string>

    <!-- Chaves utilizadas na definicao das preferencias que estão embutidas no NavigationDrawer -->
    <string name="key_mode_vision">key_mode_vision</string>
    <string name="key_mov_speed">key_mov_speed</string>
    <string name="key_centralize_trackball">key_centralize_trackball</string>
    <string name="key_full_screen">key_full_screen</string>
    <string name="key_show_axis_trackball">key_show_axis_trackball</string>

    <!-- Informações mostradas nas preferências na navigation drawer -->
    <string name="title_configuration">Configurações</string>
    <string name="title_mode_vision">Modo de visão</string>
    <string name="dialogTitle_mode_vision">Modo de visão</string>
    <string name="title_velocity">Velocidade</string>
    <string name="dialogTitle_velocity">Velocidade de movimento</string>
    <string name="title_centralize_trackball">Centralizar nuvem</string>
    <string name="title_show_axis_trackball">Eixo 3D</string>
    <string name="title_full_screen">Full screen</string>

    <!-- Valores apresentados na navigation drawer -->
    <string name="button_text_exit">Sair</string>
    <string name="button_text_open_file">Abrir arquivo</string>

    <!-- Valores usados na configuracao da preferencia de escolha do modo de visualizacao -->
    <string name="value_mode_virtual_trackball">value_virtual_trackball</string>
    <string name="value_mode_camera">value_camera</string>

    <!-- Strings do dialogo que aparece na confirmacao ao encerrar o aplicativo -->
    <string name="message_dialog_backButton_exit">Deseja encerrar o aplicativo?</string>
    <string name="title_dialog_backButton_exit">Sair</string>
    <string name="positiveButton_dialog_backButton_exit">Sim</string>
    <string name="negativeButton_dialog_backButton_exit">Não</string>

    <!-- Valores utilizados no File Chooser -->
    <string name="message_open_file_not_valid">Arquivo não é válido!</string>
    <string name="title_dialog_open_file">Arquivo válido!</string>
    <string name="message_dialog_open_file">Deseja abrir o arquivo</string>
    <string name="positiveButton_dialog_open_file">Sim</string>
    <string name="negativeButton_dialog_open_file">Não</string>

    <!-- Strings utilizadas no Viewer quando o drawer está aberto e fechado -->
    <string name="drawer_viewer_opened">@string/app_name</string>
    <string name="drawer_viewer_closed">@string/app_name</string>

    <string name="activated">Ativado</string>
    <string name="disabled">Desativado</string>

    <!-- String usadas na tela de bluetooth do aplicativo -->
    <string name="bluetooth_unavailable">Adaptador bluetooth indisponível.</string>
    <string name="bluetooth_off">Bluetooth desligado.</string>
    <string name="no_device_connected">Nenhum dispositivo conectado.</string>
    <string name="connected_device">Dispositivo conectado</string>
    <string name="setting_bluetooth">Configuração Bluetooth</string>
    <string name="connect">Conectar</string>
    <string name="title_dialog_select_device">Selecione o dispositivo</string>
    <string name="receiving_file">Recebendo arquivo</string>
    <string name="description_bluetooth_screen">Com essa ferramenta ativada, o dispositivo poderá
        receber as nuvens de pontos. Certifique-se de que o dispositivo servidor esteja pareado.</string>


</resources>
