<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:movspeedpref="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/title_configuration" >

        <ListPreference
            android:key="@string/key_mode_vision"
            android:title="@string/title_mode_vision"
            android:dialogTitle="@string/dialogTitle_mode_vision"
            android:entries="@array/mode_vision"
            android:entryValues="@array/mode_vision_values"
            android:defaultValue="@string/value_mode_virtual_trackball"
            android:persistent="false"
            android:textColor="@color/primary_text_default_material_light"/>

        <lsa.viewercloudpoints.navigation_drawer.MovementSpeedPreference
            android:key="@string/key_mov_speed"
            android:title="@string/title_velocity"
            android:dialogTitle="@string/dialogTitle_velocity"
            android:textColor="@color/primary_text_default_material_light"
            android:defaultValue="50"
            movspeedpref:maxValue="100"/>

        <Preference
            android:key="@string/key_centralize_trackball"
            android:title="@string/title_centralize_trackball" />

        <SwitchPreference
            android:key="@string/key_show_axis_trackball"
            android:title="@string/title_show_axis_trackball"
            android:defaultValue="true"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory>
        <SwitchPreference
            android:key="@string/key_full_screen"
            android:title="@string/title_full_screen"
            android:defaultValue="false"
            android:persistent="false"
            android:textColor="@color/primary_text_default_material_light" />

    </PreferenceCategory>

</PreferenceScreen>